tdf#116272 use correct property name when exporting to PPT

Change-Id: Ic1f5fb0e00531f9e36f05cbdf68b4c2fa7e98989
Reviewed-on: https://gerrit.libreoffice.org/53987
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Tomaž Vajngerl <quikee@gmail.com>